--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div>
-  <app-char-sheet></app-char-sheet>
-  <app-add-charsheet></app-add-charsheet>
-</div>
+  <app-view-char-sheets></app-view-char-sheets>
+</div>  
