Authenticatie+routing improvements
Verbeteren van de routing, plus inloggen, registreren en uitloggen.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <div class="ui container">
   <div class="ui two item menu">
-    <a class="item" routerLinkActive='active' routerLink="/charsheet/list"> Character sheets</a>
-    <a class="item" routerLinkActive='active' routerLink="/add-charsheet"> Add sheet</a>
+    <a class="item" routerLinkActive='active' routerLink="/list"> Character sheets</a>
+    <a class="item" routerLinkActive='active' routerLink="/add"> Add sheet</a>
   </div>
   <router-outlet></router-outlet>
 </div>
