--- a/frontend/src/app/user/login/login.component.html
+++ b/frontend/src/app/user/login/login.component.html
@@ -10,4 +10,7 @@
     <input type="password" id="password" formControlName='password'>
   </div>
   <button type='submit' [disabled]='!user.valid' class="ui positive right floated button" id='loginbtn'>log in</button>
+
+            <a class="blue item" routerLinkA  ctive='active' routerLink="/register">Register</a> 
+
 </form>
