--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,9 +3,10 @@
     <a class="item" routerLinkActive='active' routerLink="/list"> Character sheets listed</a>
     <a class="item" routerLinkActive='active' routerLink="/add"> Add sheet</a>
       <div class="right menu">
-          <a class="blue item" routerLinkActive='active' routerLink="/login">Login</a>  
+          <!--a class="blue item" routerLinkActive='active' routerLink="/login">Login</a-->  
           <a class="blue item" routerLinkActive='active' routerLink="/logout">Logout</a>  
-          <a class="blue item" routerLinkA  ctive='active' routerLink="/register">Register</a> 
+          <!--a class="blue item" routerLinkA  ctive='active' routerLink="/register">Register</a--> 
+          <p>{{user}}</p>
     </div>
   </div>
 <div class="ui container">
