--- a/frontend/src/app/components/char-sheet/char-sheet.component.html
+++ b/frontend/src/app/components/char-sheet/char-sheet.component.html
@@ -1,8 +1,10 @@
   <div class="ui stackable celled grid container">
-  <div class="three column row">
-    <div class="column">  <div class="ui segment">Name: {{ charsheet?.name }}</div></div>
-    <div class="column">  <div class="ui segment">Race: {{charsheet?.race}}</div></div>
-    <div class="column">   <button class="ui icon button" (click)="removeSheet()">
+  <div class="two column row">
+    <div class="eight wide column">  <div class="ui segment">Name: {{ charsheet?.name }}</div></div>
+    <div class="seven wide column">  <div class="ui segment">Race: {{charsheet?.race}}</div> 
+  
+  </div>
+    <div class="one wide column">   <button class="ui icon button" (click)="removeSheet()">
         <i class="trash outline icon"></i>
       </button></div>
   </div>
@@ -13,21 +15,20 @@
     <div class="column"> <div class="ui segment">Hit Dice: {{charsheet?.level}}D{{charsheet?.hitDice}} </div></div>
     <div class="column"> <div class="ui segment">Spellcaster: {{charsheet?.spellcaster}}</div></div>
   </div>
- 
   <div class="ui container">
-    <div class="ui celled table">
-      <thead>
-        <tr>
-        <th>Spell name</th>
-        <th>Spell Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let spell of charsheet?.spells">
-        <td>{{spell?.name}}</td>
-        <td>{{spell?.description}}</td>
-        </tr>
-      </tbody>
+      <table class="ui celled table">
+        <thead>
+          <tr>
+          <th>Spell name</th>
+          <th>Spell Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr  *ngFor="let spell of charsheet.spells">
+              <td>{{spell.name}}</td>
+              <td>{{spell.description}}</td>  
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </div>
-</div>
+   </div> 
